<resources>
    <string name="app_name">Animal Whistler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">LogOut</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="web_client_id" translatable="false">357143443759-t3k29rsj540oebcin4sl1q022963pq2a.apps.googleusercontent.com</string>

    <string name="loading">LOADING...</string>
    <string name="preguntareporte">¿Encontraste una mascota perdida?</string>
    <string name="reportala">REPÓRTALA!!!</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo Ej: Perro, Gato, Iguana, ...</string>
    <string name="raza">Raza Ej: Chihuahua, Pastor Alemán, ...</string>
    <string name="color">Color</string>
    <string name="visto">Lugar Ej: Calle, Colonia, CP, Ciudad</string>
    <string name="descripcion">Descripción (razgos particulares y cosas importantes del animal)</string>
    <string name="hintmessagechatbot">Ingresa tu mensaje</string>
    <string name="zoomin">Zoom In</string>
    <string name="zoomout">Zoom Out</string>
    <string name="send">Enviar</string>
</resources>
